File Formatting and new tutorial pages
Moved .java and .fxml files into folders and changed the code to match the new filepaths. Also added new tutorial page.

--- a/src/sample/commandLineBasics/cpAndMv.fxml
+++ b/src/sample/commandLineBasics/cpAndMv.fxml
@@ -130,7 +130,7 @@
          <children>
             <ImageView fitHeight="140.0" fitWidth="460.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Assets/mvRename.png" />
+                  <Image url="@../Assets/mvRename.png" />
                </image>
             </ImageView>
             <Region prefHeight="0.0" prefWidth="465.0" />
