--- a/src/sample/commandLineBasics/cdCont.fxml
+++ b/src/sample/commandLineBasics/cdCont.fxml
@@ -78,7 +78,7 @@
             </Text>
             <ImageView fitHeight="166.0" fitWidth="311.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Assets/cdAndPwd2.png" />
+                  <Image url="@../Assets/cdAndPwd2.png" />
                </image>
                <VBox.margin>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
