--- a/src/sample/commandLineBasics/reMove.fxml
+++ b/src/sample/commandLineBasics/reMove.fxml
@@ -62,7 +62,7 @@
    <left>
       <VBox prefHeight="618.0" prefWidth="501.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Now I think we have too many files, let’s remove some files. To remove files you can use the rm command. The rm (remove) command is used to delete files and directories. &#10;$ rm file1&#10;Take caution when using rm, there is no magical trash can that you can fish out removed files. Once they are gone, they are gone for good, so be careful. &#10;Fortunately there are some safety measures put into place, so the average joe can’t just remove a bunch of important files. Write-protected files will prompt you for confirmation before deleting them. If a directory is write-protected it will also not be easily removed. &#10;Now if you don’t care about any of that, you can absolutely remove a bunch of files. &#10;$ rm -f file1&#10;-f or force option tells rm to remove all files, whether they are write protected or not, without prompting the user (as long as you have the appropriate permissions).&#10;$ rm -i file&#10;Adding the -i flag like many of the other commands, will give you a prompt on whether you want to actually remove the files or directories. &#10;$ rm -r directory&#10;You can’t just rm a directory by default, you’ll need to add the -r flag (recursive) to remove all the files and any subdirectories it may have.&#10;You can remove a directory with the rmdir command.&#10;$ rmdir directory &#10;&#10;&#10;" wrappingWidth="478.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Now I think we have too many files, let’s remove some files. To remove files you can use the rm command. The rm (remove) command is used to delete files and directories. &#10;&#10;$ rm file1&#10;&#10;Take caution when using rm, there is no magical trash can that you can fish out removed files. Once they are gone, they are gone for good, so be careful. &#10;&#10;Fortunately there are some safety measures put into place, so the average joe can’t just remove a bunch of important files. Write-protected files will prompt you for confirmation before deleting them. If a directory is write-protected it will also not be easily removed. &#10;&#10;Now if you don’t care about any of that, you can absolutely remove a bunch of files. &#10;&#10;$ rm -f file1&#10;&#10;-f or force option tells rm to remove all files, whether they are write protected or not, without prompting the user (as long as you have the appropriate permissions).&#10;&#10;$ rm -i file&#10;" wrappingWidth="478.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font></Text>
@@ -84,7 +84,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Adding the -i flag like many of the other commands, will give you a prompt on whether you want to actually remove the files or directories. $ rm -r directoryYou can’t just rm a directory by default, you’ll need to add the -r flag (recursive) to remove all the files and any subdirectories it may have.You can remove a directory with the rmdir command.$ rmdir directory " wrappingWidth="385.6708984375">
                <font>
                   <Font size="15.0" />
                </font>
