--- a/src/sample/lessons.fxml
+++ b/src/sample/lessons.fxml
@@ -109,7 +109,7 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="usersAndGroupsBtn" layoutX="35.0" layoutY="104.0" mnemonicParsing="false" onAction="#usersAndGroupsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Users and Groups">
+            <Button fx:id="systemPackagesBtn" mnemonicParsing="false" onAction="#systemPackagesBtnClick" prefHeight="25.0" prefWidth="164.0" text="System Packages">
                <padding>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
@@ -130,7 +130,7 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <Region prefHeight="101.0" prefWidth="195.0" />
-            <Button fx:id="permissionsBtn" mnemonicParsing="false" onAction="#permissionsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Permissions">
+            <Button fx:id="usersAndGroupsBtn" mnemonicParsing="false" onAction="#usersAndGroupsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Users and Groups">
                <padding>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
@@ -138,7 +138,7 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="systemPackagesBtn" mnemonicParsing="false" onAction="#systemPackagesBtnClick" prefHeight="25.0" prefWidth="164.0" text="System Packages">
+            <Button fx:id="permissionsBtn" mnemonicParsing="false" onAction="#permissionsBtnClick" prefHeight="25.0" prefWidth="164.0" text="Permissions">
                <padding>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </padding>
