--- a/src/sample/usersAndGroups/managingUsers.fxml
+++ b/src/sample/usersAndGroups/managingUsers.fxml
@@ -39,7 +39,7 @@
                <VBox.margin>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </VBox.margin></Button>
-            <Label text="Users and Groups" textFill="WHITE">
+            <Label text="Managing Users" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
