--- a/src/sample/usersAndGroups/usersAndGroupsCont.fxml
+++ b/src/sample/usersAndGroups/usersAndGroupsCont.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -68,20 +69,20 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You couldn't access the files because they are owned by root, to access the file you must use the root command" wrappingWidth="470.0">
+            <Text fill="WHITE" layoutX="23.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You couldn't access the files because they are owned by root, to access the file you must use the sudo command" wrappingWidth="470.0">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="root cat /etc/shadow" wrappingWidth="325.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="sudo cat /etc/shadow" wrappingWidth="325.0">
                <font>
                   <Font name="Lucida Console" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                  <Insets bottom="20.0" left="30.0" right="30.0" top="20.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Now you'll be able to see the contents of the file.&#10;&#10;You can now get root access with the sudo command, but you can also run coimmands as the superuser with the su command too. &#10;&#10;The command su will log you in as root (if no username is speccified) as long as you know the password. If you type in a username you'll then login with that account.&#10;&#10;Don't let anyone have the password to root, or have access to run sudo own their own account, only people you trust.&#10;&#10;You have a new computer and want to make a new account for a family member or sibling and want to give them sudo? Easy, just remember to change &lt;username&gt; with the username you are adding" wrappingWidth="470.0">
+            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Now you'll be able to see the contents of the file.&#10;&#10;You can now get root access with the sudo command. &#10;&#10;The command su will log you in as root (if no username is speccified) and as long as you know the password. If you type in a username you'll then login with that account. That way you can access root only files as the root user directly!&#10;&#10;Don't let anyone have the password to root, or have access to run sudo own their own account, only people you trust.&#10;&#10;You have a new computer and want to make a new account for a family member or sibling and want to give them sudo? Easy, just remember to change &lt;username&gt; with the username you are adding" wrappingWidth="470.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -91,7 +92,7 @@
                   <Font name="Lucida Console" size="15.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                  <Insets bottom="20.0" left="30.0" right="30.0" top="20.0" />
                </VBox.margin>
             </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="This will create a new user, it will ask for things such as passwords after you type in this command. Feel free to ignore anything about name and address, or fill it in if you wish." wrappingWidth="456.0">
@@ -99,6 +100,14 @@
                   <Font size="15.0" />
                </font>
             </Text>
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="75.0" prefWidth="60.0" text="Back">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
@@ -109,7 +118,7 @@
       </VBox>
    </left>
    <right>
-      <VBox prefHeight="572.0" prefWidth="505.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="610.0" prefWidth="505.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </BorderPane.margin>
@@ -138,7 +147,55 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Region prefHeight="260.0" prefWidth="489.0" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Question time: You want to access a restricted file that is owned by root. Type the command to give you root power" wrappingWidth="456.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            <TextField fx:id="AnswerBox">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextField>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <HBox fx:id="rHBox1" prefHeight="100.0" prefWidth="468.0">
+                     <children>
+                        <Label fx:id="TryAgainLbl" prefHeight="30.0" prefWidth="110.0" text="Try again" textFill="WHITE">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </Label>
+                        <Region prefHeight="137.0" prefWidth="198.0" />
+                        <Label fx:id="CorrectLbl" prefHeight="40.0" prefWidth="108.0" text="Correct!" textFill="WHITE">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                           </HBox.margin>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </HBox>
+               </children>
+            </HBox>
+            <Button fx:id="AnswerBtn" mnemonicParsing="false" onAction="#AnswerBtnClick" text="Check Answer">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+            </Button>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Region prefHeight="52.0" prefWidth="418.0" />
