--- a/src/sample/lessons.fxml
+++ b/src/sample/lessons.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,6 +14,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.lessonsController">
    <bottom>
@@ -117,6 +119,9 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </Button>
+            <Region prefHeight="170.0" prefWidth="0.0" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="It's reccomended to try on a terminal alongside these tutorials. If you are running Windows, ChromeOS, or another operating system without access to a terminal you can use an online version to practice, copy and paste this link into your browser:&#10;" wrappingWidth="339.162109375" />
+            <TextField text="https://linuxcontainers.org/lxd/try-it/" />
          </children>
          <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
