--- a/src/sample/commandLineBasics/exit.fxml
+++ b/src/sample/commandLineBasics/exit.fxml
@@ -40,6 +40,14 @@
                <VBox.margin>
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </VBox.margin></Button>
+            <Label text="Exit" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <padding>
+                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+               </padding>
+            </Label>
          </children>
       </VBox>
    </top>
@@ -55,9 +63,36 @@
       </HBox>
    </bottom>
    <left>
-      <VBox BorderPane.alignment="CENTER">
+      <VBox prefHeight="618.0" prefWidth="432.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Template Text" wrappingWidth="325.0" VBox.vgrow="ALWAYS" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You have finished this section, that's the basics covered!&#10;&#10;Since the basics are covered you probably want to know how to exit from the shell so you can go make a cup of tea or coffee. For that you use the exit command&#10;&#10;" wrappingWidth="404.0" VBox.vgrow="ALWAYS">
+               <font>
+                  <Font size="15.0" />
+               </font></Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="exit" wrappingWidth="325.0">
+               <font>
+                  <Font name="Lucida Console" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Or the logout command" wrappingWidth="404.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="48.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="logout" wrappingWidth="325.0">
+               <font>
+                  <Font name="Lucida Console" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </VBox.margin>
+            </Text>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
@@ -76,6 +111,14 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Or if you are working out of a terminal GUI, you can just close the terminal with the &quot;X&quot; button in the top right.&#10;&#10;Feel free to go over this section again if you have forgotten something and need a refresher.&#10;" wrappingWidth="404.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
             <Region prefHeight="196.0" prefWidth="89.0" />
             <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="94.0" prefWidth="451.0" text="Congratulations you have completed this section! &#10;Back to lessons" textAlignment="CENTER">
                <padding>
