--- a/src/sample/usersAndGroups/etcShadow.fxml
+++ b/src/sample/usersAndGroups/etcShadow.fxml
@@ -96,6 +96,15 @@
                   <Font size="15.0" />
                </font>
             </Text>
+            <Region prefHeight="91.0" prefWidth="480.0" />
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="29.0" prefWidth="60.0" text="Back">
+               <padding>
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
